--- a/views/pult.html
+++ b/views/pult.html
@@ -73,49 +73,7 @@
             <div class="col-3 bg-warning">
 
                 <p>hello jobb 1111</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
-                <p>hello jobb</p>
+
             </div>
 
         </div>
@@ -123,7 +81,8 @@
 
         <p>If you click on me, I will disappear.</p>
         <p>Click me away!</p>
-        <p class="ucso">Click me too!</p>
+        <h4 id="ucso">Click me too!</h4>
+        <h4 id="ucso2">Click me too!</h4>
 
 
         <!--  <div class="row">
@@ -151,8 +110,8 @@
 
 
     <script>
-        console.log("pult console is OK (from html script)");
-        console.log("localStroage data (from html script) : " + localStorage.getItem("password"));
+        //console.log("pult console is OK (from html script)");
+        //console.log("localStroage data (from html script) : " + localStorage.getItem("password"));
         //document.cookie
     </script>
     <script src="jquery.slim.min.js"></script>
