Termék buttonok megjelentek a munkaterületen, terméknév és ID-t megkapták. 😊😊😊

--- a/views/pult.html
+++ b/views/pult.html
@@ -24,7 +24,7 @@
             </div>
             <div>
                 <form action="/" method="get">
-                    <button type="submit">LELTÁR 😊 </button>
+                    <button type="submit">LELTÁR 😊 1366 pixel</button>
                 </form>
             </div>
             <div>
@@ -37,11 +37,9 @@
         <!-- <div class="fixed-top bg-danger text-white p-2">Felső sáv</div> -->
         <div class="row mt-4 pt-3">
             <div class="col-9 bg-info pt-1" id="termek">
-                <h3>hello bal felső sáv !!h3!!!</h3>
+                <!-- <h3>hello bal felső sáv !!h3!!!</h3>
                 <h4>hello bal felső sáv !!h4!!!</h4>
                 <h5">hello bal felső sáv !!h5!!!</h3>
-
-
                     <div class="row">
                         <div class="col-9">
                             <p>hello bal bal p</p>
@@ -67,7 +65,7 @@
                     <button type="button" class="btn btn-primary mt-3">Primary</button>
                     <button type="button" class="btn btn-primary mt-3">Primary</button>
                     <button type="button" class="btn btn-primary mt-3">Primary</button>
-                    <button type="button" class="btn btn-primary mt-3">Primary</button>
+                    <button type="button" class="btn btn-primary mt-3">Primary</button> -->
             </div>
 
             <div class="col-3 bg-warning">
@@ -79,10 +77,10 @@
         </div>
         <p id="demo"></p>
 
-        <p>If you click on me, I will disappear.</p>
-        <p>Click me away!</p>
-        <h4 id="ucso">Click me too!</h4>
-        <h4 id="ucso2">Click me too!</h4>
+        <!-- <p>If you click on me, I will disappear.</p> -->
+        <!-- <p>Click me away!</p>
+        <h4 id="ucso"></h4>
+        <h4 id="ucso2"></h4> -->
 
 
         <!--  <div class="row">
