--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,33 +1,5 @@
-.ucso {
-    margin-bottom: 7rem;
+/* BUG: ha a felső sor button nagyságát növelni akarod, növelni kell a
+munkaterület felső kitakart sávját is!!! */
+button {
+    font-size: 1.7rem;
 }
-/* .nav-link {
-    color: aquamarine;
-} */
-/* h1 {
-    color: white;
-} */
-
-/* h2 {
-    color: blueviolet;
-} */
-
-/* .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: red;
-    color: white;
-    text-align: center;
-}
-.top {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    background-color: blue;
-    color: white;
-    text-align: center;
-}
- */
