A jobb oldali PULT-ra kiírja a termékeket + árat

--- a/views/pult.html
+++ b/views/pult.html
@@ -36,8 +36,8 @@
         <div class="row mt-5 pt-3">
             <div class="col-9 bg-info pt-1" id="termek">
             </div>
-            <div class="col-3 bg-warning">
-                <p>hello jobb 1111</p>
+            <div class="col-3 bg-warning" id="pult">
+                <!-- <p>hello jobb 1111</p> -->
             </div>
         </div>
 
