Pult SUMMA OK !!!

--- a/views/pult.html
+++ b/views/pult.html
@@ -47,6 +47,7 @@
     <div class="fixed-bottom bg-danger text-white p-2">
         <form action="/config" method="get">
             <button type="submit">⚡ config ⚡ </button>
+            <span id="summa"></span>
         </form>
     </div>
 
