--- a/views/pult.html
+++ b/views/pult.html
@@ -34,6 +34,8 @@
         </nav>
 
         <div class="row mt-5 pt-3">
+            <div class="col-9 bg-info pt-1" id="termekdrop">
+            </div>
             <div class="col-9 bg-info pt-1" id="termek">
             </div>
             <div class="col-3 bg-warning" id="pult">
@@ -51,31 +53,7 @@
         </form>
     </div>
 
-    <!-- NOTE: The Modal -->
-    <div class="modal fade" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
 
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Modal Heading</h4>
-                    <button type="button" class="close" data-dismiss="modal">×</button>
-                </div>
-
-                <!-- Modal body -->
-                <div class="modal-body" id="modal-body">
-                </div>
-
-
-
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal" id="btnModal">Close</button>
-                </div>
-
-            </div>
-        </div>
-    </div>
 
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
