--- a/views/xkimeresnev.html
+++ b/views/xkimeresnev.html
@@ -17,14 +17,14 @@
             <button type="submit">⚡ Vissza a menühöz ⚡ </button>
         </form>
 
-        <form action="/action_page.php">
+        <form>
             <label for="nev">Neve (feles ...):</label><br>
-            <input type="text" id="nev" name="nev"><br><br>
+            <input type="text" id="nev" name="nev" required><br><br>
             <label for="urtartalom">Űrtartalom <kbd> centiliterben !!!</kbd>:</label><br>
-            <input type="number" id="urtartalom" name="urtartalom"><br><br>
+            <input type="number" id="urtartalom" name="urtartalom" value=0 required><br><br>
+            <button id="newdata">Ujadat hozzáadása </button><br><br>
         </form>
 
-        <button id="newdata">Ujadat hozzáadása </button><br><br>
 
         <table class="table table-striped">
             <thead>
