--- a/views/admin.html
+++ b/views/admin.html
@@ -18,7 +18,8 @@
         <nav class="fixed-top navbar navbar-expand-sm bg-danger navbar-dark d-flex justify-content-around">
             <div>
                 <form action="/" method="get">
-                    <button type="submit" style="background-color:deeppink ">Uj termék felvitele 🤔 </button>
+                    <button type="submit" style="background-color:deeppink ">other
+                        🤔 </button>
                 </form>
             </div>
             <div>
@@ -29,11 +30,11 @@
                 </form>
             </div>
             <div>
-                <form action="/" method="get">
-                    <button type="submit" style="background-color:deeppink ">other
-                        🤔 </button>
+                <form action="/kiszereles" method="get">
+                    <button type="submit" style="background-color:chartreuse">Kiszerelés felvitele 🤔 </button>
                 </form>
             </div>
+
             <div>
                 <form action="/" method="get">
                     <button type="submit" style="background-color:deeppink ">other
