Müxik az idegenkulcs beszúrás (termekek - kiszereles)

--- a/views/admin.html
+++ b/views/admin.html
@@ -17,8 +17,8 @@
         <!-- NOTE: felső sav -->
         <nav class="fixed-top navbar navbar-expand-sm bg-danger navbar-dark d-flex justify-content-around">
             <div>
-                <form action="/" method="get">
-                    <button type="submit" style="background-color:deeppink ">other
+                <form action="/termekek" method="get">
+                    <button type="submit" style="background-color:chartreuse">Termék adatok
                         🤔 </button>
                 </form>
             </div>
@@ -31,14 +31,13 @@
             </div>
             <div>
                 <form action="/kiszereles" method="get">
-                    <button type="submit" style="background-color:chartreuse">Kiszerelés felvitele 🤔 </button>
+                    <button type="submit" style="background-color:chartreuse">Kiszerelés felvitele 😊 </button>
                 </form>
             </div>
 
             <div>
-                <form action="/" method="get">
-                    <button type="submit" style="background-color:deeppink ">other
-                        🤔 </button>
+                <form action="/csoportok" method="get">
+                    <button type="submit" style="background-color:chartreuse">Termékcsoportok 🤔 </button>
                 </form>
             </div>
             <div>
