--- a/views/csoportok.html
+++ b/views/csoportok.html
@@ -19,7 +19,7 @@
 
         <form>
             <label for="nev">Termékek csoportosítása :</label><br>
-            <input type="text" id="nev" name="nev" value="*" required><br><br>
+            <input type="text" id="nev" name="nev" required><br><br>
             <button id="newdata">Ujadat hozzáadása </button><br><br>
         </form>
 
