insertMySQL() kikapcsolva, a figyel() függvényt kidolgozni a továbbiakra

--- a/views/termekek.html
+++ b/views/termekek.html
@@ -17,7 +17,7 @@
             <button type="submit">⚡ Vissza a menühöz ⚡ </button>
         </form>
 
-        <form action="/action_page.php">
+        <form>
             <label for="nev">Termék neve:</label><br>
             <input type="text" id="nev" name="nev"><br><!-- NOTE: -->
             <label for="beszar">Beszerzési ár :</label><br>
@@ -58,11 +58,6 @@
 
         <button id="newdata">Ujadat hozzáadása </button><br><br>
 
-
-
-
-
-
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -72,18 +67,10 @@
                 </tr>
             </thead>
             <tbody id="termekek">
-
-
-
             </tbody>
         </table>
-
         <div id="adatok"></div>
-
-
     </div>
-
-
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
