A hibás azaz NULL adatbázis tárolás korrigálva zero értékekkel. 😋😋😋

--- a/views/termekek.html
+++ b/views/termekek.html
@@ -19,41 +19,44 @@
 
         <form>
             <label for="nev">Termék neve:</label><br>
-            <input type="text" id="nev" name="nev"><br><!-- NOTE: -->
+            <input type="text" id="nev" name="nev" required><br><!-- NOTE: -->
             <label for="beszar">Beszerzési ár :</label><br>
-            <input type="number" value=0 id="beszar" name="beszar"><br><!-- NOTE: -->
+            <input type="number" id="beszar" name="beszar"><br><!-- NOTE: -->
             <label for="elar">Eladási ár :</label><br>
-            <input type="number" value=0 id="elar" name="elar"><br><!-- NOTE: -->
+            <input type="number" id="elar" name="elar"><br><!-- NOTE: -->
             <label for="leltarozando">Leltározando (i/n):</label><br>
             <input type="text" id="leltarozando" name="leltarozando" size="1" value="i"><br> <!-- NOTE: -->
             <label for="kritikus">Kritikus mennyiség :</label><br>
-            <input type="number" value=0 id="kritikus" name="kritikus"><br> <!-- NOTE: -->
+            <input type="number" id="kritikus" name="kritikus"><br> <!-- NOTE: -->
             <label for="gyujto">Gyüjtő mennyiség :</label><br>
-            <input type="number" value=0 id="gyujto" name="gyujto"><br> <!-- NOTE: -->
+            <input type="number" id="gyujto" name="gyujto"><br> <!-- NOTE: -->
             <label for="jelenlegiKeszlet">Az új termék induló készlete :</label><br>
-            <input type="number" value=0 id="jelenlegiKeszlet" name="jelenlegiKeszlet"><br><!-- NOTE: -->
-            <label for="urtartalom">Ha a termék kimérhető akkor az űrtartalma :</label><br>
-            <input type="number" value=0 id="urtartalom" name="urtartalom"><br><!-- NOTE: -->
+            <input type="number" id="jelenlegiKeszlet" name="jelenlegiKeszlet"><br><!-- NOTE: -->
+            <label for="urtartalom">A termék Beszerzési űrtartalma <span style="background-color:chartreuse ;">
+                    ! deciliterben ! </span> :</label><br>
+            <input type="number" id="urtartalom" name="urtartalom"><br><!-- NOTE: -->
 
-            <div>
+            <div class="shadow p-3 mb-5 bg-white rounded ">
                 <fieldset>
                     <legend>A termék milyen kiszerelésű?</legend><!-- NOTE: -->
                     <div id="kiszerelesSelect"></div>
                     <!-- <div id="xkimeresnevSelect"></div> -->
                 </fieldset>
             </div>
-
-            <fieldset>
-                <legend>A termék melyik csoportba tartozik?</legend><!-- NOTE: -->
-                <div id="csoportSelect"></div>
-            </fieldset>
+            <div class="shadow p-3 mb-5 bg-white rounded">
+                <fieldset>
+                    <legend>A termék melyik csoportba tartozik?</legend><!-- NOTE: -->
+                    <div id="csoportSelect"></div>
+                </fieldset>
+            </div>
             <!-- HACK: https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_form_horizontal&stacked=h HACK: -->
             <!-- HACK: -->
             <!-- TODO: NOTE: INFO: NOTE: TODO: -->
             <!-- <label for="kiszereles_id">Kiszerelés *****:</label><br>
             <input type="text" id="kiszereles_id" name="kiszereles_id"><br><br> -->
             <!-- TODO: NOTE: INFO: NOTE: TODO: -->
-            <!-- <input type="submit" value="Submit"> -->
+
+            <!-- <input type="submit" value="Ujadat hozzáadása" id="newdata"> -->
         </form>
 
         <button id="newdata">Ujadat hozzáadása </button><br><br>
