--- a/views/termekek.html
+++ b/views/termekek.html
@@ -67,6 +67,32 @@
 
         <button id="newdata">Ujadat hozzáadása </button><br><br>
 
+        <!-- Kimért termékek és a kimért mennyiség PÁROSÍTÁSA INFO: Modal INFO: -->
+        <div class="modal" id="createXkimeres">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Kimérési egységek hozzárendelése a termékhez</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <div id="azonosito"></div>
+                        <div id="modalKineresNev"></div>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
         <table class="table table-striped">
             <thead>
                 <tr>
