Ez q...ra megszivatott

--- a/views/termekek.html
+++ b/views/termekek.html
@@ -86,7 +86,8 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal" onclick=""
+                            id="mDataSend">Close</button>
                     </div>
 
                 </div>
