Other error repair and clean 😎

--- a/views/termekek.html
+++ b/views/termekek.html
@@ -17,7 +17,7 @@
             <button type="submit">⚡ Vissza a menühöz ⚡ </button>
         </form>
 
-        <form>
+        <form id="totalForm">
             <div class="shadow p-2 mb-1 bg-white rounded">
                 <label for="nev">Termék neve:</label><br>
                 <input type="text" id="nev" name="nev" required><br>
@@ -106,7 +106,6 @@
             </tbody>
         </table>
         <div id="adatok"></div>
-    </div>
     </div>
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
