--- a/views/xkimeresnev.html
+++ b/views/xkimeresnev.html
@@ -19,9 +19,9 @@
 
         <form>
             <label for="nev">Neve (feles ...):</label><br>
-            <input type="text" id="nev" name="nev" required><br><br>
+            <input type="text" id="nev" name="nev"><br><br>
             <label for="urtartalom">Űrtartalom <kbd> centiliterben !!!</kbd>:</label><br>
-            <input type="number" id="urtartalom" name="urtartalom" value=0 required><br><br>
+            <input type="number" id="urtartalom" name="urtartalom" required><br><br>
             <button id="newdata">Ujadat hozzáadása </button><br><br>
         </form>
 
