--- a/views/admin.html
+++ b/views/admin.html
@@ -19,7 +19,7 @@
             <div>
                 <form action="/termekek" method="get">
                     <button type="submit" style="background-color:chartreuse">Termék adatok
-                        🤔 </button>
+                        😊 </button>
                 </form>
             </div>
             <div>
@@ -37,7 +37,7 @@
 
             <div>
                 <form action="/csoportok" method="get">
-                    <button type="submit" style="background-color:chartreuse">Termékcsoportok 🤔 </button>
+                    <button type="submit" style="background-color:chartreuse">Termékcsoportok 😊 </button>
                 </form>
             </div>
             <div>
