Pult baloldal megvett termék db száma + - del

--- a/views/termekek.html
+++ b/views/termekek.html
@@ -48,7 +48,7 @@
             </div>
             <div class="shadow p-2 mb-1 bg-white rounded">
                 <label for="urtartalom">A termék Beszerzési űrtartalma <span style="background-color:chartreuse ;">
-                        ! deciliterben ! </span> :</label><br>
+                        ! deciliterben ! </span> / vagy darabos árunál 1 :</label><br>
                 <input type="number" id="urtartalom" name="urtartalom"><br>
             </div>
             <div class="shadow p-3 mb-5 bg-white rounded">
