--- a/views/pult.html
+++ b/views/pult.html
@@ -12,40 +12,151 @@
 
 <body>
 
-    <div class="container-fluid">
+    <!-- NOTE: felső sav START -->
+    <nav class="fixed-top navbar navbar-expand-sm bg-danger navbar-dark d-flex justify-content-around">
+        <div>
+            <form action="/" method="get">
+                <button type="submit" style="background-color:greenyellow;">Kilépés! 😊 </button>
+            </form>
+        </div>
+        <div>
+            <form action="/" method="get">
+                <button type="submit" style="background-color: red;">LELTÁR 🤔 1366 pixel</button>
+            </form>
+        </div>
+        <div>
+            <form action="/" method="get">
+                <button type="submit" style="background-color:red;">KOSARAK 🤔 </button>
+            </form>
+        </div>
+    </nav>
+    <!-- NOTE: felső sav END -->
 
-        <!-- NOTE: felső sav -->
-        <nav class="fixed-top navbar navbar-expand-sm bg-danger navbar-dark d-flex justify-content-around">
-            <div>
-                <form action="/" method="get">
-                    <button type="submit" style="background-color:greenyellow;">Kilépés! 😊 </button>
-                </form>
-            </div>
-            <div>
-                <form action="/" method="get">
-                    <button type="submit" style="background-color: red;">LELTÁR 🤔 1366 pixel</button>
-                </form>
-            </div>
-            <div>
-                <form action="/" method="get">
-                    <button type="submit" style="background-color:red;">KOSARAK 🤔 </button>
-                </form>
-            </div>
-        </nav>
-
-        <div class="row mt-5 pt-3">
-            <div class="col-9 bg-info pt-1" id="termekdrop">
-            </div>
-            <div class="col-9 bg-info pt-1" id="termek">
-            </div>
-            <div class="col-3 bg-warning" id="pult">
+    <!-- @media NOTE: -->
+    <div class="app_page1">
+        <div class="row">
+            <div class="col-sm-9" id="left""><!-- BUG: ball-->
+                <div id=" termekdrop"></div>
+            <div id="termek"></div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>aaa</h1>
+        </div>
+        <div class="col-sm-3" id="right">
+            <!-- BUG: jobb-->
+            <div id="pultos">
+                <div id="pult"></div>
+                <!-- <div id="torol"></div> -->
                 <!-- <p>hello jobb 1111</p> -->
             </div>
-        </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>www</h1>
+        </div><!-- BUG: -->
+    </div>
+    <!-- @media NOTE: -->
 
+
+    <div class="absolute">
+        <button style="background-color:bisque ">Bevitel</button>
+        <button style="background-color:yellow ">Hitel</button>
+        <button style="background-color:cornflowerblue ">Kosárba</button>
     </div>
 
-    <!-- NOTE: also sav -->
+
+    <!-- NOTE: also sav START -->
     <div class="fixed-bottom bg-danger text-white p-2 ">
         <form action="/config" method="get">
             <div class="d-flex justify-content-between">
@@ -54,15 +165,27 @@
                 <span id="summa">Mindösszesen</span>
             </div>
         </form>
-
     </div>
-
+    <!-- NOTE: also sav END -->
 
 
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
     <script src="pult.js"></script>
+    <!-- NOTE: template render -->
+    <!-- 
+    <div class="card">
+        <div>
+            ${sorok.nev} <span>${sorok.ar}</span>
+        </div>
+        <div>
+            <button>del</button><button>-</button>${sorok.db}<button>+</button> <span>osszesen</span>
+        </div>
+    </div>
+     -->
+    <!-- NOTE: template render -->
+
 </body>
 
 </html>
