--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@
 }
 
 #left {
-    background-color: #fc6e51;
+    background-color: #ffa6f8;
     /* text-align: center; */
     height: 100%;
 }
@@ -49,7 +49,7 @@
 
 #right {
     height: 100%;
-    background-color: #4fc1e9;
+    background-color: #d0f368;
     /* text-align: center; */
 }
 
