--- a/views/pult.html
+++ b/views/pult.html
@@ -313,7 +313,7 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-danger" data-dismiss="modal" id="zzz"
+                    <button type="submit" class="btn btn-danger" data-dismiss="modal" id=""
                         onclick="kosarNevSzerintiTarolas()">Close</button>
                 </div>
 
