--- a/views/csoportok.html
+++ b/views/csoportok.html
@@ -42,6 +42,7 @@
     <script src="bootstrap.bundle.min.js"></script>
     <script src="admin.js"></script>
     <script src="csoportok.js"></script> <!-- BUG: -->
+    <!-- BUG:BUG: BUG: BUG:BUG:-->
 </body>
 
 </html>
