--- a/views/kiszereles.html
+++ b/views/kiszereles.html
@@ -57,7 +57,7 @@
     <script src="popper.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
     <script src="admin.js"></script>
-    <script src="kiszereles.js"></script>
+    <script src="kiszereles.js"></script><!-- BUG:BUG: BUG: BUG:BUG:-->
     <!--  <script>
         renderXkimeresnev();
     </script> -->
