--- a/views/termekek.html
+++ b/views/termekek.html
@@ -111,7 +111,7 @@
     <script src="popper.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
     <script src="admin.js"></script>
-    <script src="termekek.js"></script>
+    <script src="termekek.js"></script><!-- BUG:BUG: BUG: BUG:BUG:-->
 </body>
 
 </html>
