--- a/views/pult.html
+++ b/views/pult.html
@@ -16,17 +16,17 @@
     <nav class="fixed-top navbar navbar-expand-sm bg-danger navbar-dark d-flex justify-content-around">
         <div>
             <form action="/" method="get">
-                <button type="submit" class="btn btn-success btn-lg">Kilépés!</button>
+                <button type="submit" class="btn btn-success">Kilépés!</button>
             </form>
         </div>
         <div>
             <form action="/" method="get">
-                <button type="submit" style="background-color: red;">LELTÁR 🤔 1366 pixel</button>
+                <button type="submit" class="btn btn-secondary">LELTÁR 🤔 1366 pixel</button>
             </form>
         </div>
         <div>
             <form action="/" method="get">
-                <button type="button" class="btn btn-warning btn-lg kosarak">KOSARAK</button>
+                <button type="button" class="btn btn-warning kosarak">KOSARAK</button>
             </form>
         </div>
     </nav>
@@ -158,7 +158,7 @@
         <form action="/config" method="get">
             <div class="d-flex justify-content-between">
 
-                <button type="submit">⚡ config ⚡ </button>
+                <button type="submit" class="btn btn-primary">⚡ config ⚡ </button>
                 <span id="summa">Mindösszesen</span>
             </div>
         </form>
