--- a/views/termekek.html
+++ b/views/termekek.html
@@ -47,8 +47,8 @@
                 <input type="number" id="jelenlegiKeszlet" name="jelenlegiKeszlet"><br>
             </div>
             <div class="shadow p-2 mb-1 bg-white rounded">
-                <label for="urtartalom">A termék Beszerzési űrtartalma <span style="background-color:chartreuse ;">
-                        ! deciliterben ! </span> / vagy darabos árunál 1 :</label><br>
+                <label for="urtartalom">A termék beszerzési űrtartalma <span style="background-color:chartreuse ;">
+                        ! CSAK KIMÉRT termék esetén deciliterben ! </span> / MINDEN MÁS esetben 1 :</label><br>
                 <input type="number" id="urtartalom" name="urtartalom"><br>
             </div>
             <div class="shadow p-3 mb-5 bg-white rounded">
