--- a/views/admin.html
+++ b/views/admin.html
@@ -37,7 +37,7 @@
             </div>
             <div>
                 <form action="/kiszereles" method="get">
-                    <button type="submit" class="btn btn-warning ">Kiszerelés felvitele (2) </button>
+                    <button type="submit" class="btn btn-secondary ">Kiszerelés felvitele (opcionális) </button>
                 </form>
             </div>
 
